--- a/public/ng/less/gogs/base.less
+++ b/public/ng/less/gogs/base.less
@@ -11,7 +11,6 @@
 html,
 body {
     height: 100%;
-    overflow-y: scroll;
 }
 .octicon,
 .fa {
